<resources>
    <string name="app_name">EBmusic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="pause"></string>
    <string name="prev"></string>
    <string name="next"></string>
    <string name="forward"></string>
    <string name="back"></string>
</resources>
