<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.music.yog.ebmusic.PlayerActivity">

    <dyanamitechetan.vusikview.VusikView
        android:id="@+id/musicView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_above="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:background="@drawable/image"
        android:id="@+id/imgThumb"/>


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="368dp"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"

        android:paddingTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/pause"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/reverse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/play"
        android:text="@string/pause"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/next"
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/seekBar"
        android:background="@drawable/for2"
        android:text="@string/next" />

    <Button
        android:id="@+id/previous"
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekBar"
        android:background="@drawable/pre"
        android:text="@string/prev"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/reverse"
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:layout_below="@+id/seekBar"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/pause"
        android:layout_toStartOf="@+id/pause"
        android:background="@drawable/pre1"
        android:text="@string/back"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/forward"
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:layout_below="@+id/seekBar"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/pause"
        android:layout_toRightOf="@+id/pause"
        android:background="@drawable/for1"
        android:text="@string/forward"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />
    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="450dp"
        android:src="@drawable/sound"
        android:id="@+id/imageView2" />

    <SeekBar
        android:id="@+id/volumeBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toLeftOf="@+id/next"
        android:layout_toStartOf="@+id/next"
        android:max="100"
        android:progress="50" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="26dp"
        android:layout_height="26dp"

        android:layout_alignBottom="@+id/volumeBar"
        android:layout_toEndOf="@+id/volumeBar"
        android:layout_toRightOf="@+id/volumeBar"
        android:src="@drawable/sound2" />






</RelativeLayout>

